- Use var - var made final when possible