@@ -39,10 +39,8 @@ import com.oracle.javafx.scenebuilder.kit.editor.panel.util.dialog.ErrorDialog;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.List;
 
 import javafx.collections.FXCollections;
-import javafx.collections.ObservableList;
 import javafx.stage.FileChooser;
 
 /**
@@ -51,31 +49,31 @@ import javafx.stage.FileChooser;
 public class SceneStyleSheetMenuController {
     private final DocumentWindowController documentWindowController;
     
-    public SceneStyleSheetMenuController(DocumentWindowController dwc) {
+    public SceneStyleSheetMenuController(final DocumentWindowController dwc) {
         this.documentWindowController = dwc;
     }
 
     void performAddSceneStyleSheet() {
-        boolean knownFilesModified = false;
-        ObservableList<File> knownFiles = documentWindowController.getEditorController().getSceneStyleSheets();
+        var knownFilesModified = false;
+        var knownFiles = documentWindowController.getEditorController().getSceneStyleSheets();
         
         if (knownFiles == null) {
             knownFiles = FXCollections.observableArrayList();
         }
         
         // Open a file chooser for *.css & *.bss
-        FileChooser fileChooser = new FileChooser();
+        final var fileChooser = new FileChooser();
         fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter(
                 com.oracle.javafx.scenebuilder.kit.i18n.I18N.getString("scenestylesheet.filechooser.filter.msg"),
                 "*.css", "*.bss")); //NOI18N
         fileChooser.setInitialDirectory(EditorController.getNextInitialDirectory());
-        List<File> selectedFiles = fileChooser.showOpenMultipleDialog(documentWindowController.getStage());
+        final var selectedFiles = fileChooser.showOpenMultipleDialog(documentWindowController.getStage());
         
         if (selectedFiles != null) {
-            assert selectedFiles.isEmpty() == false;
+            assert !selectedFiles.isEmpty();
             // Keep track of the user choice for next time
-            EditorController.updateNextInitialDirectory(selectedFiles.get(0));
-            for (File f : selectedFiles) {
+            EditorController.updateNextInitialDirectory(selectedFiles.getFirst());
+            for (final var f : selectedFiles) {
                 if (!knownFiles.contains(f)) {
                     knownFiles.add(f);
                     knownFilesModified = true;
@@ -89,8 +87,8 @@ public class SceneStyleSheetMenuController {
         }
     }
     
-    public void performRemoveSceneStyleSheet(File toRemove) {
-        ObservableList<File> knownFiles = documentWindowController.getEditorController().getSceneStyleSheets();
+    public void performRemoveSceneStyleSheet(final File toRemove) {
+        final var knownFiles = documentWindowController.getEditorController().getSceneStyleSheets();
         assert knownFiles != null;
         
         if (knownFiles.contains(toRemove)) {
@@ -99,11 +97,11 @@ public class SceneStyleSheetMenuController {
         }
     }
     
-    public void performOpenSceneStyleSheet(File toOpen) {
+    public void performOpenSceneStyleSheet(final File toOpen) {
         try {
             EditorPlatform.open(toOpen.getPath());
-        } catch (IOException ioe) {
-            final ErrorDialog errorDialog = new ErrorDialog(documentWindowController.getStage());
+        } catch (final IOException ioe) {
+            final var errorDialog = new ErrorDialog(documentWindowController.getStage());
             errorDialog.setTitle(I18N.getString("error.file.open.title"));
             errorDialog.setMessage(I18N.getString("error.file.open.message", toOpen));
             errorDialog.setDetails(I18N.getString("error.filesystem.details"));
