@@ -36,14 +36,11 @@ import com.oracle.javafx.scenebuilder.kit.util.Deprecation;
 import javafx.scene.control.skin.TableColumnHeader;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
-import java.util.Set;
+
 import javafx.geometry.BoundingBox;
 import javafx.geometry.Bounds;
-import javafx.geometry.Point2D;
 import javafx.scene.Node;
-import javafx.scene.control.TableColumnBase;
 import javafx.scene.control.TreeTableColumn;
 import javafx.scene.control.TreeTableView;
 
@@ -59,10 +56,10 @@ public class TreeTableViewDesignInfoX {
         // no-op
     }
 
-    public Bounds getColumnBounds(TreeTableColumn<?,?> treeTableColumn) {
-        final TreeTableView<?> tv = treeTableColumn.getTreeTableView();
-        final Bounds tb = tv.getLayoutBounds();
-        final Bounds hb = getColumnHeaderBounds(treeTableColumn);
+    public Bounds getColumnBounds(final TreeTableColumn<?,?> treeTableColumn) {
+        final var tv = treeTableColumn.getTreeTableView();
+        final var tb = tv.getLayoutBounds();
+        final var hb = getColumnHeaderBounds(treeTableColumn);
         
         //
         //           x0             x1          
@@ -78,39 +75,39 @@ public class TreeTableViewDesignInfoX {
         // y1  +--------------------------------------+
         //
         
-        final double x0 = hb.getMinX();
-        final double x1 = hb.getMaxX();
-        final double y0 = hb.getMinY();
-        final double y1 = tb.getMaxY();
+        final var x0 = hb.getMinX();
+        final var x1 = hb.getMaxX();
+        final var y0 = hb.getMinY();
+        final var y1 = tb.getMaxY();
         
         return new BoundingBox(x0, y0, x1 - x0, y1 - y0);
     }
     
     
-    public Bounds getColumnHeaderBounds(TreeTableColumn<?,?> treeTableColumn) {
-        final TreeTableView<?> tv = treeTableColumn.getTreeTableView();
-        final Node hn = getColumnNode(treeTableColumn);
+    public Bounds getColumnHeaderBounds(final TreeTableColumn<?,?> treeTableColumn) {
+        final var tv = treeTableColumn.getTreeTableView();
+        final var hn = getColumnNode(treeTableColumn);
         return Deprecation.localToLocal(hn, hn.getLayoutBounds(), tv);
     }
     
     
-    public Node getColumnNode(TreeTableColumn<?,?> tableColumn) {
+    public Node getColumnNode(final TreeTableColumn<?,?> tableColumn) {
         assert tableColumn != null;
         assert tableColumn.getTreeTableView() != null;
         
 
         // Looks for the sub nodes which match the .column-header CSS selector
-        final TreeTableView<?> tableView = tableColumn.getTreeTableView();
-        final Set<Node> set = tableView.lookupAll(".column-header"); //NOI18N
+        final var tableView = tableColumn.getTreeTableView();
+        final var set = tableView.lookupAll(".column-header"); //NOI18N
         
         // Searches the result for the node associated to 'tableColumn'.
         // This item has (TableColumn.class, tableColumn) in its property list.
         Node result = null;
-        final Iterator<Node> it = set.iterator();
+        final var it = set.iterator();
         while ((result == null) && it.hasNext()) {
-            Node n = it.next();
+            final var n = it.next();
             assert n instanceof TableColumnHeader;
-            final TableColumnBase<?,?> tc = ((TableColumnHeader)n).getTableColumn();
+            final var tc = ((TableColumnHeader)n).getTableColumn();
             if (tc == tableColumn) {
                 result = n;
             }
@@ -120,7 +117,7 @@ public class TreeTableViewDesignInfoX {
     }
     
     
-    public <T> TreeTableColumn<T,?> lookupColumn(TreeTableView<T>  tableView, double sceneX, double sceneY) {
+    public <T> TreeTableColumn<T,?> lookupColumn(final TreeTableView<T>  tableView, final double sceneX, final double sceneY) {
         TreeTableColumn<T,?> result = null;
         
         //
@@ -141,11 +138,11 @@ public class TreeTableViewDesignInfoX {
         
         // Walk through the column to see if one contains 'x' vertical
         List<TreeTableColumn<T,?>> tableColumns = tableView.getColumns();
-        List<TreeTableColumn<T,?>> columnPath = new ArrayList<>();
-        while (tableColumns.isEmpty() == false) {
-            final TreeTableColumn<T,?> tc = lookupColumn(tableColumns, sceneX);
+        final List<TreeTableColumn<T,?>> columnPath = new ArrayList<>();
+        while (!tableColumns.isEmpty()) {
+            final var tc = lookupColumn(tableColumns, sceneX);
             if (tc != null) {
-                columnPath.add(0, tc);
+                columnPath.addFirst(tc);
                 tableColumns = tc.getColumns();
             } else {
                 tableColumns = Collections.emptyList(); // To stop the loop
@@ -158,10 +155,10 @@ public class TreeTableViewDesignInfoX {
         } else {
             // Check if one column in columnPath contains (sceneX, sceneY)
             // => case #1 or #2
-            for (TreeTableColumn<T,?> tc : columnPath) {
-                final Node headerNode = getColumnNode(tc);
-                final Bounds headerBounds = headerNode.getLayoutBounds();
-                final Point2D p = headerNode.sceneToLocal(sceneX, sceneY, true /* rootScene */);
+            for (final var tc : columnPath) {
+                final var headerNode = getColumnNode(tc);
+                final var headerBounds = headerNode.getLayoutBounds();
+                final var p = headerNode.sceneToLocal(sceneX, sceneY, true /* rootScene */);
                 if (headerBounds.contains(p)) {
                     result = tc;
                     break;
@@ -170,7 +167,7 @@ public class TreeTableViewDesignInfoX {
             
             if (result == null) {
                 // No column in columnPath contains sceneX => case #3
-                result = columnPath.get(0);
+                result = columnPath.getFirst();
             }
         }
         
@@ -179,15 +176,15 @@ public class TreeTableViewDesignInfoX {
     
     
     private <T> TreeTableColumn<T,?> lookupColumn(
-            List<TreeTableColumn<T,?>> tableColumns, double sceneX) {
+            final List<TreeTableColumn<T,?>> tableColumns, final double sceneX) {
         TreeTableColumn<T,?> result = null;
         
         // Walk through the columns to see if one contains 'x' vertical
-        for (TreeTableColumn<T,?> tc : tableColumns) {
-            final Node headerNode = getColumnNode(tc);
+        for (final var tc : tableColumns) {
+            final var headerNode = getColumnNode(tc);
             if (headerNode != null) {
-                final Bounds headerBounds = headerNode.getLayoutBounds();
-                final Point2D p = headerNode.sceneToLocal(sceneX, 0, true /* rootScene */);
+                final var headerBounds = headerNode.getLayoutBounds();
+                final var p = headerNode.sceneToLocal(sceneX, 0, true /* rootScene */);
                 if ((headerBounds.getMinX() <= p.getX()) 
                         && (p.getX() < headerBounds.getMaxX())) {
                     result = tc;
