@@ -39,7 +39,7 @@ import javafx.scene.shape.Circle;
 
 import com.oracle.javafx.scenebuilder.kit.editor.panel.content.ContentPanelController;
 import static com.oracle.javafx.scenebuilder.kit.editor.panel.content.driver.handles.AbstractHandles.SELECTION_HANDLES_SIZE;
-import static com.oracle.javafx.scenebuilder.kit.editor.panel.content.driver.handles.AbstractHandles.SELECTION_WIRE;
+
 import com.oracle.javafx.scenebuilder.kit.editor.panel.content.gesture.AbstractGesture;
 import com.oracle.javafx.scenebuilder.kit.editor.panel.content.gesture.mouse.EditCurveGesture;
 import com.oracle.javafx.scenebuilder.kit.fxom.FXOMInstance;
@@ -58,8 +58,8 @@ public class PolygonHandles extends AbstractCurveHandles<Polygon> {
     private final List<Circle> verticesHandle = new ArrayList<>();
     private final List<Line> linesHandle = new ArrayList<>();
     
-    public PolygonHandles(ContentPanelController contentPanelController,
-            FXOMInstance fxomInstance) {
+    public PolygonHandles(final ContentPanelController contentPanelController,
+                          final FXOMInstance fxomInstance) {
         super(contentPanelController, fxomInstance, Polygon.class);
         
         final List<Node> rootNodeChildren = getRootNode().getChildren();
@@ -76,8 +76,8 @@ public class PolygonHandles extends AbstractCurveHandles<Polygon> {
      */
     @Override
     protected void layoutDecoration() {
-        final Polygon l = getSceneGraphObject();
-        final boolean snapToPixel = true;
+        final var l = getSceneGraphObject();
+        final var snapToPixel = true;
         
         if (l.getPoints().size() != verticesHandle.size() * 2) {
             setupHandles(getRootNode().getChildren());
@@ -85,20 +85,20 @@ public class PolygonHandles extends AbstractCurveHandles<Polygon> {
         if (l.getPoints().size() % 2 != 0) {
             return;
         }
-        AtomicInteger counter = new AtomicInteger();
+        final var counter = new AtomicInteger();
         IntStream.range(0, l.getPoints().size() / 2)
             .mapToObj(i -> l.getPoints().subList(i * 2, 2 * (i + 1)))
-            .map(list -> sceneGraphObjectToDecoration(list.get(0), list.get(1), snapToPixel))
+            .map(list -> sceneGraphObjectToDecoration(list.getFirst(), list.get(1), snapToPixel))
             .forEach(p -> {
-                Circle c = verticesHandle.get(counter.getAndIncrement());
+                final var c = verticesHandle.get(counter.getAndIncrement());
                 c.setCenterX(p.getX());
                 c.setCenterY(p.getY());
             });
         IntStream.range(0, verticesHandle.size())
                 .forEach(i -> {
-                    Circle c1 = verticesHandle.get(i);
-                    Circle c2 = verticesHandle.get(i + 1 == verticesHandle.size() ? 0 : i + 1);
-                    Line line = linesHandle.get(i);
+                    final var c1 = verticesHandle.get(i);
+                    final var c2 = verticesHandle.get(i + 1 == verticesHandle.size() ? 0 : i + 1);
+                    final var line = linesHandle.get(i);
                     line.setStartX(c1.getCenterX());
                     line.setStartY(c1.getCenterY());
                     line.setEndX(c2.getCenterX());
@@ -110,7 +110,7 @@ public class PolygonHandles extends AbstractCurveHandles<Polygon> {
     protected void startListeningToSceneGraphObject() {
         super.startListeningToSceneGraphObject();
         
-        final Polygon l = getSceneGraphObject();
+        final var l = getSceneGraphObject();
         l.getPoints().addListener(pointsListener);
     }
 
@@ -118,12 +118,12 @@ public class PolygonHandles extends AbstractCurveHandles<Polygon> {
     protected void stopListeningToSceneGraphObject() {
         super.stopListeningToSceneGraphObject();
         
-        final Polygon l = getSceneGraphObject();
+        final var l = getSceneGraphObject();
         l.getPoints().removeListener(pointsListener);
     }
 
     @Override
-    public AbstractGesture findGesture(Node node) {
+    public AbstractGesture findGesture(final Node node) {
         final EditCurveGesture result;
         
         if (node instanceof Circle && verticesHandle.contains((Circle) node)) {
@@ -152,7 +152,7 @@ public class PolygonHandles extends AbstractCurveHandles<Polygon> {
         verticesHandle.clear();
         linesHandle.clear();
         rootNodeChildren.clear();
-        final Polygon l = getSceneGraphObject();
+        final var l = getSceneGraphObject();
         IntStream.range(0, l.getPoints().size() / 2)
                 .mapToObj(i -> new Line())
                 .forEach(line -> {
@@ -172,10 +172,10 @@ public class PolygonHandles extends AbstractCurveHandles<Polygon> {
                 });
     }
     
-    private void setupHandleState(Circle handleCircle) {
+    private void setupHandleState(final Circle handleCircle) {
         
-        final String styleClass = isEnabled() ? SELECTION_HANDLES : SELECTION_HANDLES_DIM;
-        final Cursor cursor = isEnabled() ? Cursor.OPEN_HAND : Cursor.DEFAULT;
+        final var styleClass = isEnabled() ? SELECTION_HANDLES : SELECTION_HANDLES_DIM;
+        final var cursor = isEnabled() ? Cursor.OPEN_HAND : Cursor.DEFAULT;
         
         handleCircle.getStyleClass().add(styleClass);
         handleCircle.setCursor(cursor);
@@ -185,7 +185,7 @@ public class PolygonHandles extends AbstractCurveHandles<Polygon> {
     /* 
      * Wraper to avoid the 'leaking this in constructor' warning emitted by NB.
      */
-    private void setupHandles(Node node) {
+    private void setupHandles(final Node node) {
         attachHandles(node, this);
     }
 }
