@@ -38,6 +38,7 @@ import java.io.PrintWriter;
 import java.net.MalformedURLException;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystemNotFoundException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -55,7 +56,6 @@ import java.util.TimerTask;
 import java.util.TreeSet;
 
 import com.oracle.javafx.scenebuilder.kit.editor.EditorController;
-import com.oracle.javafx.scenebuilder.kit.editor.drag.source.AbstractDragSource;
 import com.oracle.javafx.scenebuilder.kit.editor.drag.source.DocumentDragSource;
 import com.oracle.javafx.scenebuilder.kit.editor.panel.util.AbstractFxmlPanelController;
 import com.oracle.javafx.scenebuilder.kit.editor.panel.util.dialog.AbstractModalDialog.ButtonID;
@@ -65,7 +65,6 @@ import com.oracle.javafx.scenebuilder.kit.fxom.FXOMArchive;
 import com.oracle.javafx.scenebuilder.kit.fxom.FXOMDocument;
 import com.oracle.javafx.scenebuilder.kit.fxom.FXOMInstance;
 import com.oracle.javafx.scenebuilder.kit.fxom.FXOMObject;
-import com.oracle.javafx.scenebuilder.kit.fxom.FXOMProperty;
 import com.oracle.javafx.scenebuilder.kit.fxom.FXOMPropertyT;
 import com.oracle.javafx.scenebuilder.kit.i18n.I18N;
 import com.oracle.javafx.scenebuilder.kit.library.BuiltinLibrary;
@@ -87,7 +86,6 @@ import javafx.scene.control.Label;
 import javafx.scene.control.ListCell;
 import javafx.scene.control.ListView;
 import javafx.scene.control.TitledPane;
-import javafx.scene.input.Dragboard;
 import javafx.scene.input.KeyCode;
 import javafx.scene.input.KeyEvent;
 import javafx.scene.input.TransferMode;
@@ -139,7 +137,7 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
      *
      * @param c the editor controller (never null).
      */
-    public LibraryPanelController(EditorController c, MavenPreferences mavenPreferences) {
+    public LibraryPanelController(final EditorController c, final MavenPreferences mavenPreferences) {
         super(LibraryPanelController.class.getResource("LibraryPanel.fxml"), I18N.getBundle(), c); //NOI18N
         startListeningToLibrary();
         this.mavenPreferences = mavenPreferences;
@@ -161,7 +159,7 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
      * @param searchPattern null or the search pattern to apply to this library
      * panel.
      */
-    public void setSearchPattern(String searchPattern) {
+    public void setSearchPattern(final String searchPattern) {
         this.searchPattern = searchPattern.toUpperCase(Locale.ENGLISH);
         searchPatternDidChange();
     }
@@ -170,9 +168,9 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
      * @param owner
      * @treatAsPrivate Perform the import jar action.
      */
-    public void performImportJarFxml(Window owner) {
+    public void performImportJarFxml(final Window owner) {
         // Open file chooser and get user selection
-        final List<File> importedFiles = performSelectJarOrFxmlFile(owner);
+        final var importedFiles = performSelectJarOrFxmlFile(owner);
         processImportJarFxml(importedFiles);
     }
     
@@ -180,8 +178,8 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
      * @param owner
      * @treatAsPrivate Perform the import jar action.
      */
-    public void performImportFromFolder(Window owner) {
-        File folder = performSelectFolder(owner);
+    public void performImportFromFolder(final Window owner) {
+        final var folder = performSelectFolder(owner);
         processImportFolder(folder);
     }
     
@@ -189,11 +187,11 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
      * @treatAsPrivate Perform the import of the selection
      * @param objects the FXOM objects to import to customize the Library content.
      */
-    public void performImportSelection(List<FXOMObject> objects) {
+    public void performImportSelection(final List<FXOMObject> objects) {
         processInternalImport(objects);
     }
 
-    public void animateAccordion(boolean animate) {
+    public void animateAccordion(final boolean animate) {
         this.animateAccordion = animate;
         libAccordion.getPanes().forEach(tp -> tp.setAnimated(animate));
     }
@@ -206,7 +204,7 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
      * @param oldDocument the previous fxom document or null
      */
     @Override
-    protected void fxomDocumentDidChange(FXOMDocument oldDocument) {
+    protected void fxomDocumentDidChange(final FXOMDocument oldDocument) {
     }
 
     /**
@@ -260,7 +258,7 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         setUserLibraryPathString();
     }
 
-    private void displayModeDidChange(DISPLAY_MODE displayMode) {
+    private void displayModeDidChange(final DISPLAY_MODE displayMode) {
         if (libAccordion != null) {
             switch (displayMode) {
                 case SECTIONS:
@@ -336,11 +334,11 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
     private DISPLAY_MODE currentDisplayMode;
     private DISPLAY_MODE previousDisplayMode = DISPLAY_MODE.SECTIONS;
     
-    public void setPreviousDisplayMode(DISPLAY_MODE displayMode) {
+    public void setPreviousDisplayMode(final DISPLAY_MODE displayMode) {
         this.previousDisplayMode = displayMode;
     }
     
-    public void setDisplayMode(DISPLAY_MODE displayMode) {
+    public void setDisplayMode(final DISPLAY_MODE displayMode) {
         this.currentDisplayMode = displayMode;
         displayModeDidChange(displayMode);
     }
@@ -381,7 +379,7 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
 //        getEditorController().libraryProperty().removeListener(libraryListener);
 //    }
 
-    void libraryDidChange(Library oldLib) {
+    void libraryDidChange(final Library oldLib) {
         if (libAccordion != null) {
             // Clear the content of the panel.
             libAccordion.getPanes().clear();
@@ -426,40 +424,40 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
     // First TitledPane is expanded.
     private void populateLibraryPanel() {
         // libData is backend structure for all that we put in the Accordion.
-        LinkedHashMap<String, ArrayList<LibraryItem>> libData = new LinkedHashMap<>();
-        TreeSet<String> sectionNames = new TreeSet<>(getEditorController().getLibrary().getSectionComparator());
-        List<TitledPane> panes = libAccordion.getPanes();
+        final var libData = new LinkedHashMap<String, ArrayList<LibraryItem>>();
+        final var sectionNames = new TreeSet<String>(getEditorController().getLibrary().getSectionComparator());
+        final List<TitledPane> panes = libAccordion.getPanes();
         
         searchData.clear();
         getLibList().getItems().clear();
         
         if (getEditorController().getLibrary().getItems().size() > 0) {
             // Construct a sorted set of all lib section names.
-            for (LibraryItem item : getEditorController().getLibrary().getItems()) {
+            for (final var item : getEditorController().getLibrary().getItems()) {
                 sectionNames.add(item.getSection());
             }
 
             // Create a sorted set of lib elements for each section.
-            for (String sectionName : sectionNames) {
+            for (final var sectionName : sectionNames) {
                 libData.put(sectionName, new ArrayList<>());
             }
 
             // Add each LibraryItem to the appropriate set.
-            for (LibraryItem item : getEditorController().getLibrary().getItems()) {
+            for (final var item : getEditorController().getLibrary().getItems()) {
                 libData.get(item.getSection()).add(item);
             }
 
             // Parse our lib data structure and populate the Accordion accordingly.
-            for (String sectionName : sectionNames) {
-                ListView<LibraryListItem> itemsList = new ListView<>();
+            for (final var sectionName : sectionNames) {
+                final var itemsList = new ListView<LibraryListItem>();
                 itemsList.setId(sectionName + "List"); // for QE //NOI18N
                 itemsList.setCellFactory(cb);
                 itemsList.addEventHandler(KeyEvent.KEY_RELEASED, keyEventHandler);
                 Collections.sort(libData.get(sectionName), new LibraryItemNameComparator());
-                for (LibraryItem item : libData.get(sectionName)) {
+                for (final var item : libData.get(sectionName)) {
                     itemsList.getItems().add(new LibraryListItem(item));
                 }
-                TitledPane sectionPane = new TitledPane(sectionName, itemsList);
+                final var sectionPane = new TitledPane(sectionName, itemsList);
                 sectionPane.setId(sectionName); // for QE
                 sectionPane.setAnimated(true);
                 panes.add(sectionPane);
@@ -467,7 +465,7 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
                 searchData.addAll(libData.get(sectionName));
 
                 getLibList().getItems().add(new LibraryListItem(sectionName));
-                for (LibraryItem item : libData.get(sectionName)) {
+                for (final var item : libData.get(sectionName)) {
                     getLibList().getItems().add(new LibraryListItem(item));
                 }
             }
@@ -491,14 +489,14 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         libAccordion.getPanes().forEach(tp -> tp.setAnimated(animateAccordion));
     }
     
-    private void expandPaneWithName(String paneName) {
-        String sectionName = paneName;
+    private void expandPaneWithName(final String paneName) {
+        var sectionName = paneName;
         
         if (sectionName == null) {
             sectionName = BuiltinLibrary.TAG_CONTAINERS;
         }
         
-        for (TitledPane tp : libAccordion.getPanes()) {
+        for (final var tp : libAccordion.getPanes()) {
             if (tp.getText().equals(sectionName)) {
 //                System.out.println("expandPaneWithName - Expand section " + sectionName);
                 libAccordion.setExpandedPane(tp);
@@ -528,14 +526,14 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         //
         if (currentDisplayMode.equals(DISPLAY_MODE.SEARCH)) {
             libSearchList.getItems().clear();
-            final ArrayList<LibraryItem> rawFilteredItem = new ArrayList<>();
-            for (LibraryItem item : searchData) {
+            final var rawFilteredItem = new ArrayList<LibraryItem>();
+            for (final var item : searchData) {
                 if (item.getName().toUpperCase(Locale.ROOT).contains(searchPattern)) {
                     rawFilteredItem.add(item);
                 }
             }
             Collections.sort(rawFilteredItem, new LibraryItemNameComparator());
-            for (LibraryItem item : rawFilteredItem) {
+            for (final var item : rawFilteredItem) {
                 libSearchList.getItems().add(new LibraryListItem(item));
             }
             rawFilteredItem.clear();
@@ -552,19 +550,19 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
     private final Callback<ListView<LibraryListItem>, ListCell<LibraryListItem>> cb
             = param -> new LibraryListCell(getEditorController());
     
-    private void handleKeyEvent(KeyEvent e) {
+    private void handleKeyEvent(final KeyEvent e) {
         // On ENTER we try to insert the item which is selected within the Library.
         if (e.getCode() == KeyCode.ENTER) {
             // This way of doing things requires the use of an @SuppressWarnings("unchecked")
 //            final LibraryItem item = ((ListView<LibraryItem>)e.getSource()).getSelectionModel().getSelectedItem();
             // hence this other way below ...
-            Object source = e.getSource();
+            final var source = e.getSource();
             assert source instanceof ListView;
-            final ListView<?> list = (ListView<?>)source;
-            Object rawItem = list.getSelectionModel().getSelectedItem();
+            final var list = (ListView<?>)source;
+            final var rawItem = list.getSelectionModel().getSelectedItem();
             assert rawItem instanceof LibraryListItem;
-            final LibraryListItem listitem = (LibraryListItem)rawItem;
-            final LibraryItem item = listitem.getLibItem();
+            final var listitem = (LibraryListItem)rawItem;
+            final var item = listitem.getLibItem();
              
             if (getEditorController().canPerformInsert(item)) {
                 getEditorController().performInsert(item);
@@ -577,7 +575,7 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
     private void startListeningToDrop() {
         libPane.setOnDragDropped(t -> {
 //                System.out.println("libPane onDragDropped");
-            AbstractDragSource dragSource = getEditorController().getDragController().getDragSource();
+            final var dragSource = getEditorController().getDragController().getDragSource();
             if (dragSource instanceof DocumentDragSource) {
                 processInternalImport(((DocumentDragSource)dragSource).getDraggedObjects());
             } else {
@@ -586,10 +584,10 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
                 t.setDropCompleted(true);
                 // Drop gesture is only valid when the Library is an instance of UserLibrary
                 if (getEditorController().getLibrary() instanceof UserLibrary) {
-                    Dragboard db = t.getDragboard();
+                    final var db = t.getDragboard();
                     if (db.hasFiles()) {
-                        final List<File> files = db.getFiles();
-                        for (File file : files) {
+                        final var files = db.getFiles();
+                        for (final var file : files) {
                             // Keep only jar and fxml files
                             if (file.isFile() && (file.getName().endsWith(".jar") || file.getName().endsWith(".fxml"))) { //NOI18N
 //                                System.out.println("libPane onDragDropped - Retaining file " + file.getName());
@@ -619,8 +617,8 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
 //                System.out.println("libPane onDragExited");
             if (initiateImportDialog) {
                 initiateImportDialog = false;
-                final Timer timer = new Timer(true);
-                final TimerTask timerTask = new TimerTask() {
+                final var timer = new Timer(true);
+                final var timerTask = new TimerTask() {
 
                     @Override
                     public void run() {
@@ -638,8 +636,8 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         
         libPane.setOnDragOver(t -> {
 //                System.out.println("libPane onDragOver");
-            AbstractDragSource dragSource = getEditorController().getDragController().getDragSource();
-            Dragboard db = t.getDragboard();
+            final var dragSource = getEditorController().getDragController().getDragSource();
+            final var db = t.getDragboard();
             // db has file when dragging a file from native file manager (Mac Finder, Windows Explorer, ...).
             // dragSource is not null if the user drags something from Hierarchy or Content panel.
             if (db.hasFiles() || dragSource != null) {
@@ -661,15 +659,15 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
     // SceneBuilder (from Content or Hierarchy).
     // We stop the watching thread to avoid potential parsing of a file that
     // would not yet be properly finalized on disk.
-    private void processInternalImport(List<FXOMObject> objects) {
+    private void processInternalImport(final List<FXOMObject> objects) {
         sectionNameToKeepOpened = getExpandedSectionName();
         setUserLibraryPathString();
-        Path libPath = Paths.get(userLibraryPathString);
-        boolean hasDependencies = false;
+        final var libPath = Paths.get(userLibraryPathString);
+        var hasDependencies = false;
         // Selection can be multiple: as soon as one has dependencies
         // we won't import anything.
         // Copy of the dependencies remains something to do (DTL-5879).
-        for (FXOMObject asset : objects) {
+        for (final var asset : objects) {
             if (hasDependencies(asset)) {
                 hasDependencies = true;
                 break;
@@ -684,21 +682,21 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
             try {
                 // The selection can be multiple, in which case each asset is
                 // processed separately.
-                for (FXOMObject asset : objects) {
+                for (final var asset : objects) {
                     // Create an FXML layout as a String
-                    ArrayList<FXOMObject> selection = new ArrayList<>();
+                    final var selection = new ArrayList<FXOMObject>();
                     selection.add(asset);
-                    final FXOMArchive fxomArchive = new FXOMArchive(selection);
-                    final FXOMArchive.Entry entry0 = fxomArchive.getEntries().get(0);
-                    String fxmlText = entry0.getFxmlText();
+                    final var fxomArchive = new FXOMArchive(selection);
+                    final var entry0 = fxomArchive.getEntries().getFirst();
+                    final var fxmlText = entry0.getFxmlText();
 
                     // Write the FXML layout into a dedicated file stored in the user Library dir.
                     // We use the tag name of the top element and append a number:
                     // if Library dir already contains SplitPane_1.fxml and top element has
                     // tag name SplitPane then we will create SplitPane_2.fxml and so on.
                     // Note the tag name is most of the time identical to the Java class name, see DTL-6643.
-                    String prefix = asset.getGlueElement().getTagName();
-                    File fxmlFile = getUniqueFxmlFileName(prefix, userLibraryPathString);
+                    final var prefix = asset.getGlueElement().getTagName();
+                    final var fxmlFile = getUniqueFxmlFileName(prefix, userLibraryPathString);
                     writeFxmlFile(fxmlFile, fxmlText, libPath);
                 }
             } finally {
@@ -711,8 +709,8 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         }
     }
 
-    private void writeFxmlFile(File targetFile, String text, Path libPath) {
-        Path targetFilePath = Paths.get(targetFile.getPath());
+    private void writeFxmlFile(final File targetFile, final String text, final Path libPath) {
+        final var targetFilePath = Paths.get(targetFile.getPath());
         createUserLibraryDir(libPath);
 
         try {
@@ -720,11 +718,11 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
             Files.createFile(targetFilePath);
 
             // Write content of file
-            try (PrintWriter writer = new PrintWriter(targetFile, "UTF-8")) { //NOI18N
+            try (final var writer = new PrintWriter(targetFile, StandardCharsets.UTF_8)) { //NOI18N
                 writer.write(text);
             }
-        } catch (IOException ioe) {
-            final ErrorDialog errorDialog = new ErrorDialog(null);
+        } catch (final IOException ioe) {
+            final var errorDialog = new ErrorDialog(null);
             errorDialog.setTitle(I18N.getString("error.file.create.title"));
             errorDialog.setMessage(I18N.getString("error.file.create.message", targetFilePath.normalize().toString()));
             errorDialog.setDetails(I18N.getString("error.write.details"));
@@ -733,8 +731,8 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         }
     }
     
-    private File getUniqueFxmlFileName(String prefix, String libDir) {
-        int suffix = 0;
+    private File getUniqueFxmlFileName(final String prefix, final String libDir) {
+        var suffix = 0;
         File file = null;
         while (file == null || file.exists()) {
             suffix++;
@@ -744,13 +742,13 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         return file;
     }
     
-    private void processImportJarFxml(List<File> importedFiles) {
+    private void processImportJarFxml(final List<File> importedFiles) {
         if (importedFiles != null && !importedFiles.isEmpty()) {
             sectionNameToKeepOpened = getExpandedSectionName();
-            Path libPath = Paths.get(((UserLibrary)getEditorController().getLibrary()).getPath());
+            final var libPath = Paths.get(((UserLibrary)getEditorController().getLibrary()).getPath());
             // Create UserLibrary dir if missing
             if (createUserLibraryDir(libPath)) {
-                final List<File> fxmlFiles = getSubsetOfFiles(".fxml", importedFiles); //NOI18N
+                final var fxmlFiles = getSubsetOfFiles(".fxml", importedFiles); //NOI18N
 
                 if (!fxmlFiles.isEmpty() && enoughFreeSpaceOnDisk(fxmlFiles) && ! hasDependencies(fxmlFiles)) {
                     copyFilesToUserLibraryDir(fxmlFiles);
@@ -760,24 +758,24 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
                     }
                 }
 
-                final List<File> jarFiles = getSubsetOfFiles(".jar", importedFiles); //NOI18N
+                final var jarFiles = getSubsetOfFiles(".jar", importedFiles); //NOI18N
                 // For jar files we delegate to the import dialog.
                 if (!jarFiles.isEmpty() && enoughFreeSpaceOnDisk(jarFiles)) {
                     // From here we know we will initiate the import dialog.
                     // This is why we put application window on the front.
                     // From there the import dialog window, which is application modal,
                     // should come on top of it.
-                    final Window window = getPanelRoot().getScene().getWindow();
+                    final var window = getPanelRoot().getScene().getWindow();
                     if (window instanceof Stage) {
-                        final Stage stage = (Stage) window;
+                        final var stage = (Stage) window;
                         stage.toFront();
                     }
 
-                    final ImportWindowController iwc
+                    final var iwc
                             = new ImportWindowController(this, jarFiles, mavenPreferences, (Stage) window);
                     iwc.setToolStylesheet(getEditorController().getToolStylesheet());
                     // See comment in OnDragDropped handle set in method startListeningToDrop.
-                    ButtonID userChoice = iwc.showAndWait();
+                    final var userChoice = iwc.showAndWait();
 
                     if (userChoice.equals(ButtonID.OK) && currentDisplayMode.equals(DISPLAY_MODE.SECTIONS)) {
                         sectionNameToKeepOpened = UserLibrary.TAG_USER_DEFINED;
@@ -787,24 +785,24 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         }
     }
     
-    private void processImportFolder(File folder) {
+    private void processImportFolder(final File folder) {
         if (folder != null && folder.exists() && folder.isDirectory()) {
-            Path libPath = Paths.get(((UserLibrary)getEditorController().getLibrary()).getPath());
+            final var libPath = Paths.get(((UserLibrary)getEditorController().getLibrary()).getPath());
             if (createUserLibraryDir(libPath)) {
                 // From here we know we will initiate the import dialog.
                 // This is why we put application window on the front.
                 // From there the import dialog window, which is application modal,
                 // should come on top of it.
-                final Window window = getPanelRoot().getScene().getWindow();
+                final var window = getPanelRoot().getScene().getWindow();
                 if (window instanceof Stage) {
-                    final Stage stage = (Stage) window;
+                    final var stage = (Stage) window;
                     stage.toFront();
                 }
 
-                final ImportWindowController iwc = new ImportWindowController(this, Arrays.asList(folder), mavenPreferences, (Stage) window);
+                final var iwc = new ImportWindowController(this, Arrays.asList(folder), mavenPreferences, (Stage) window);
                 iwc.setToolStylesheet(getEditorController().getToolStylesheet());
                 // See comment in OnDragDropped handle set in method startListeningToDrop.
-                ButtonID userChoice = iwc.showAndWait();
+                final var userChoice = iwc.showAndWait();
 
                 if (userChoice.equals(ButtonID.OK) && currentDisplayMode.equals(DISPLAY_MODE.SECTIONS)) {
                     sectionNameToKeepOpened = UserLibrary.TAG_USER_DEFINED;
@@ -813,10 +811,10 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         }
     }
     
-    private List<File> getSubsetOfFiles(String pattern, List<File> files) {
+    private List<File> getSubsetOfFiles(final String pattern, final List<File> files) {
         final List<File> res = new ArrayList<>();
         
-        for (File file : files) {
+        for (final var file : files) {
             if (file.getName().endsWith(pattern)) {
                 res.add(file);
             }
@@ -825,14 +823,14 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         return res;
     }
     
-    private boolean createUserLibraryDir(Path libPath) {
-        boolean dirCreated = false;
+    private boolean createUserLibraryDir(final Path libPath) {
+        var dirCreated = false;
         try {
             // Files.createDirectories do nothing if provided Path already exists.
             Files.createDirectories(libPath, new FileAttribute<?>[]{});
             dirCreated = true;
-        } catch (IOException ioe) {
-            final ErrorDialog errorDialog = new ErrorDialog(null);
+        } catch (final IOException ioe) {
+            final var errorDialog = new ErrorDialog(null);
             errorDialog.setTitle(I18N.getString("error.dir.create.title"));
             errorDialog.setMessage(I18N.getString("error.dir.create.message", libPath.normalize().toString()));
             errorDialog.setDetails(I18N.getString("error.write.details"));
@@ -843,15 +841,15 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         return dirCreated;
     }
     
-    private boolean enoughFreeSpaceOnDisk(List<File> files) {
-        long totalSize = Long.MAX_VALUE; // bytes
+    private boolean enoughFreeSpaceOnDisk(final List<File> files) {
+        var totalSize = Long.MAX_VALUE; // bytes
         try {
-            for (File file : files) {
-                Path targetPath = Paths.get(file.getAbsolutePath());
+            for (final var file : files) {
+                final var targetPath = Paths.get(file.getAbsolutePath());
                 totalSize += Files.size(targetPath);
             }
-        } catch (IOException ioe) {
-            final ErrorDialog errorDialog = new ErrorDialog(null);
+        } catch (final IOException ioe) {
+            final var errorDialog = new ErrorDialog(null);
             errorDialog.setTitle(I18N.getString("error.disk.space.title"));
             errorDialog.setMessage(I18N.getString("error.disk.space.message"));
             errorDialog.setDetails(I18N.getString("error.write.details"));
@@ -859,7 +857,7 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
             errorDialog.showAndWait();
         }
         
-        final File libFile = new File(((UserLibrary)getEditorController().getLibrary()).getPath());
+        final var libFile = new File(((UserLibrary)getEditorController().getLibrary()).getPath());
         return totalSize < libFile.getFreeSpace();
     }
     
@@ -867,10 +865,10 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
     // the copy goes well (for atomicity). If a copy fails we try to erase the
     // temporary file to stick to an as clean as possible disk content.
     // TODO fix DTL-5879 [When copying FXML files in lib dir we have to copy files which are external references as well]
-    void copyFilesToUserLibraryDir(List<File> files) {
-        int errorCount = 0;
+    void copyFilesToUserLibraryDir(final List<File> files) {
+        var errorCount = 0;
         IOException savedIOE = null;
-        String savedFileName = ""; //NOI18N
+        var savedFileName = ""; //NOI18N
         Path tempTargetPath = null;
         setUserLibraryPathString();
         
@@ -879,22 +877,22 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         ((UserLibrary) getEditorController().getLibrary()).stopWatching();
         
         try {
-            for (File file : files) {
+            for (final var file : files) {
                 savedFileName = file.getName();
                 tempTargetPath = Paths.get(userLibraryPathString, file.getName() + TEMP_FILE_EXTENSION);
-                Path ultimateTargetPath = Paths.get(userLibraryPathString, file.getName());
+                final var ultimateTargetPath = Paths.get(userLibraryPathString, file.getName());
                 Files.deleteIfExists(tempTargetPath);
                 Files.copy(file.toPath(), tempTargetPath, StandardCopyOption.REPLACE_EXISTING);
                 Files.move(tempTargetPath, ultimateTargetPath, StandardCopyOption.ATOMIC_MOVE);
             }
-        } catch (IOException ioe) {
+        } catch (final IOException ioe) {
             errorCount++;
             savedIOE = ioe;
         } finally {
             if (tempTargetPath != null) {
                 try {
                     Files.deleteIfExists(tempTargetPath);
-                } catch (IOException ioe) {
+                } catch (final IOException ioe) {
                     errorCount++;
                     savedIOE = ioe;
                 }
@@ -904,7 +902,7 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         ((UserLibrary) getEditorController().getLibrary()).startWatching();
 
         if (errorCount > 0) {
-            final ErrorDialog errorDialog = new ErrorDialog(null);
+            final var errorDialog = new ErrorDialog(null);
             errorDialog.setTitle(I18N.getString("error.copy.title"));
             if (errorCount == 1) {
                 errorDialog.setMessage(I18N.getString("error.copy.message.single", savedFileName, userLibraryPathString));
@@ -921,15 +919,15 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
      * Open a file chooser that allows to select one or more FXML and JAR file.
      * @return the list of selected files
      */
-    private List<File> performSelectJarOrFxmlFile(Window owner) {
-        FileChooser fileChooser = new FileChooser();
+    private List<File> performSelectJarOrFxmlFile(final Window owner) {
+        final var fileChooser = new FileChooser();
         fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter(I18N.getString("lib.filechooser.filter.msg"),
                 "*.fxml", "*.jar")); //NOI18N
         fileChooser.setInitialDirectory(EditorController.getNextInitialDirectory());
-        List<File> selectedFiles = fileChooser.showOpenMultipleDialog(owner);
+        final var selectedFiles = fileChooser.showOpenMultipleDialog(owner);
         if(selectedFiles != null && !selectedFiles.isEmpty()){
             // Keep track of the user choice for next time
-            EditorController.updateNextInitialDirectory(selectedFiles.get(0));
+            EditorController.updateNextInitialDirectory(selectedFiles.getFirst());
         }
         return selectedFiles;
     }
@@ -938,11 +936,11 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
      * Open a file chooser that allows to select one folder
      * @return the selected folder or null
      */
-    private File performSelectFolder(Window owner) {
-        DirectoryChooser dirChooser = new DirectoryChooser();
+    private File performSelectFolder(final Window owner) {
+        final var dirChooser = new DirectoryChooser();
         dirChooser.setInitialDirectory(EditorController.getNextInitialDirectory());
 
-        File folder = dirChooser.showDialog(owner);
+        final var folder = dirChooser.showDialog(owner);
         if (folder != null) {
             // Keep track of the user choice for next time
             EditorController.updateNextInitialDirectory(folder);
@@ -952,7 +950,7 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
     }
     
     private void userLibraryUpdateRejected() {
-        final AlertDialog dialog = new AlertDialog(null);
+        final var dialog = new AlertDialog(null);
         dialog.setTitle(I18N.getString("alert.import.reject.dependencies.title"));
         dialog.setMessage(I18N.getString("alert.import.reject.dependencies.message"));
         dialog.setDetails(I18N.getString("alert.import.reject.dependencies.details"));
@@ -966,20 +964,20 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
 
     private static final PropertyName valueName = new PropertyName("value"); //NOI18N
     
-    private boolean hasDependencies(List<File> fxmlFiles) {
-        boolean hasDependencies = false;
-        boolean scanWentWell = true;
+    private boolean hasDependencies(final List<File> fxmlFiles) {
+        var hasDependencies = false;
+        var scanWentWell = true;
 
-        for (File fxmlFile : fxmlFiles) {
+        for (final var fxmlFile : fxmlFiles) {
             try {
                 if (hasDependencies(fxmlFile)) {
                     hasDependencies = true;
                     break;
                 }
-            } catch (IOException ioe) {
+            } catch (final IOException ioe) {
                 scanWentWell = false;
                 hasDependencies = true; // not sure but better take no risk
-                final ErrorDialog errorDialog = new ErrorDialog(null);
+                final var errorDialog = new ErrorDialog(null);
                 errorDialog.setTitle(I18N.getString("error.import.reject.dependencies.scan.title"));
                 errorDialog.setMessage(I18N.getString("error.import.reject.dependencies.scan.message"));
                 errorDialog.setDetails(I18N.getString("error.import.reject.dependencies.scan.details"));
@@ -995,12 +993,12 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         return hasDependencies;
     }
 
-    private boolean hasDependencies(File fxmlFile) throws IOException {
-        boolean res = false;
-        URL location;
+    private boolean hasDependencies(final File fxmlFile) throws IOException {
+        var res = false;
+        final URL location;
         
         location = fxmlFile.toURI().toURL();
-        FXOMDocument fxomDocument =
+        final var fxomDocument =
                 new FXOMDocument(FXOMDocument.readContentFromURL(location), location,
                         getEditorController().getFxomDocument().getClassLoader(),
                         getEditorController().getFxomDocument().getResources(),
@@ -1010,29 +1008,29 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
         return res;
     }
     
-    private boolean hasDependencies(FXOMObject rootFxomObject) {
-        final List<Path> targetPaths = getDependenciesPaths(rootFxomObject);
+    private boolean hasDependencies(final FXOMObject rootFxomObject) {
+        final var targetPaths = getDependenciesPaths(rootFxomObject);
         return targetPaths.size() > 0;
     }
     
-    private List<Path> getDependenciesPaths(FXOMObject rootFxomObject) {
+    private List<Path> getDependenciesPaths(final FXOMObject rootFxomObject) {
 
         final List<Path> targetPaths = new ArrayList<>();
 
-        for (FXOMPropertyT p : rootFxomObject.collectPropertiesT()) {
-            final Path path = extractPath(p);
+        for (final var p : rootFxomObject.collectPropertiesT()) {
+            final var path = extractPath(p);
             if (path != null) {
                 targetPaths.add(path);
             }
         }
         
-        for (FXOMObject fxomObject : rootFxomObject.collectObjectWithSceneGraphObjectClass(URL.class)) {
+        for (final var fxomObject : rootFxomObject.collectObjectWithSceneGraphObjectClass(URL.class)) {
             if (fxomObject instanceof FXOMInstance) {
-                final FXOMInstance urlInstance = (FXOMInstance) fxomObject;
-                final FXOMProperty valueProperty = urlInstance.getProperties().get(valueName);
+                final var urlInstance = (FXOMInstance) fxomObject;
+                final var valueProperty = urlInstance.getProperties().get(valueName);
                 if (valueProperty instanceof FXOMPropertyT) {
-                    FXOMPropertyT valuePropertyT = (FXOMPropertyT) valueProperty;
-                    final Path path = extractPath(valuePropertyT);
+                    final var valuePropertyT = (FXOMPropertyT) valueProperty;
+                    final var path = extractPath(valuePropertyT);
                     if (path != null) {
                         targetPaths.add(path);
                     }
@@ -1046,45 +1044,45 @@ public class LibraryPanelController extends AbstractFxmlPanelController {
     }
     
     
-    private Path extractPath(FXOMPropertyT p) {
+    private Path extractPath(final FXOMPropertyT p) {
         Path result;
         
-        final PrefixedValue pv = new PrefixedValue(p.getValue());
+        final var pv = new PrefixedValue(p.getValue());
         if (pv.isPlainString()) {
             try {
-                final URL url = new URL(pv.getSuffix());
+                final var url = new URL(pv.getSuffix());
                 result = Paths.get(url.toURI());
-            } catch(MalformedURLException|URISyntaxException x) {
+            } catch(final MalformedURLException | URISyntaxException x) {
                 result = null;
             }
         } else if (pv.isDocumentRelativePath()) {
-            final URL documentLocation = p.getFxomDocument().getLocation();
+            final var documentLocation = p.getFxomDocument().getLocation();
             if (documentLocation == null) {
                 result = null;
             } else {
-                final URL url = pv.resolveDocumentRelativePath(documentLocation);
+                final var url = pv.resolveDocumentRelativePath(documentLocation);
                 if (url == null) {
                     result = null;
                 } else {
                     try {
                         result = Paths.get(url.toURI());
-                    } catch(FileSystemNotFoundException|URISyntaxException x) {
+                    } catch(final FileSystemNotFoundException | URISyntaxException x) {
                         result = null;
                     }
                 }
             }
         } else if (pv.isClassLoaderRelativePath()) {
-            final ClassLoader classLoader = p.getFxomDocument().getClassLoader();
+            final var classLoader = p.getFxomDocument().getClassLoader();
             if (classLoader == null) {
                 result = null;
             } else {
-                final URL url = pv.resolveClassLoaderRelativePath(classLoader);
+                final var url = pv.resolveClassLoaderRelativePath(classLoader);
                 if (url == null) {
                     result = null;
                 } else {
                     try {
                         result = Paths.get(url.toURI());
-                    } catch(URISyntaxException x) {
+                    } catch(final URISyntaxException x) {
                         result = null;
                     }
                 }
